[package]
name = "postfix_policy"
version = "0.2.0"
authors = ["Grollicus"]
edition = "2018"
keywords = ["postfix", "policy", "email"]
repository = "https://github.com/Grollicus/postfix_policy"
documentation = "https://docs.rs/postfix_policy/"
description = "A Postfix SMTP access policy delegation handler. It handles protocol parsing and response sending to talk to Postfix."
license = "LGPL-3.0-or-later"
include = [
    "Cargo.toml",
    "src/*.rs",
    "examples/*.rs",
]

[dependencies]
